--- a/booth-features.html
+++ b/booth-features.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -62,7 +61,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "Product",
         "name": "BASIC PACKAGE",
         "description": "Standard-row booth (3x3, 9 sqm) with name listing on event website, 2 exhibitor passes, and access to networking lounge.",
-        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026", "url": "https://eduexpoqatar.com/index.html" },
         "offers": {
           "@type": "Offer",
           "url": "https://eduexpoqatar.com/booth-registration.html?package=Basic",
@@ -75,7 +74,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "Product",
         "name": "SILVER PACKAGE",
         "description": "Priority row booth (4x3, 12 sqm) with logo on event website, name in event catalogs, 3 exhibitor passes, and access to networking lounge with complimentary drinks & snacks.",
-        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026", "url": "https://eduexpoqatar.com/index.html" },
         "offers": {
           "@type": "Offer",
           "url": "https://eduexpoqatar.com/booth-registration.html?package=Silver",
@@ -88,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "Product",
         "name": "GOLD PACKAGE",
         "description": "Prime hall location booth (6x3, 18 sqm) with logo and 50-word catalog feature, 4 passes, 1 speaking slot, 10% off add-ons, and access to networking lounge + Speaker Zone.",
-        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026", "url": "https://eduexpoqatar.com/index.html" },
         "offers": {
           "@type": "Offer",
           "url": "https://eduexpoqatar.com/booth-registration.html?package=Gold",
@@ -101,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "@type": "Product",
         "name": "PLATINUM PACKAGE",
         "description": "Entrance corner booth (7x3, 21 sqm) for maximum visibility, with premium furniture, top-tier logo placement, homepage feature, 8 passes, 3 speaking slots, and access to VIP lounge.",
-        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026", "url": "https://eduexpoqatar.com/index.html" },
         "offers": {
           "@type": "Offer",
           "url": "https://eduexpoqatar.com/booth-registration.html?package=Platinum",
@@ -295,7 +294,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <p>Seconds</p>
                         </div>
                     </div>
-                    <a href="sponsorship-registration.html" class="btn btn-primary">Request Full Sponsorship Deck</a>
+                    <button id="open-deck-form-btn" class="btn btn-primary">Download The Deck</button>
                 </div>
             </div>
         </section>
