--- a/booth-registration-ar.html
+++ b/booth-registration-ar.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -31,21 +29,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "احجز جناحك | تسجيل العارضين | معرض قطر للتعليم 2026",
+        "url": "https://eduexpoqatar.com/booth-registration-ar.html"
       },
       {
         "@context": "https://schema.org",
@@ -54,12 +40,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "للعارضين",
-          "item": "/why-exhibit-ar.html"
+          "item": "https://eduexpoqatar.com/why-exhibit-ar.html"
         },{
           "@type": "ListItem",
           "position": 3,
