--- a/booth-registration.html
+++ b/booth-registration.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -50,21 +48,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "Book Your Booth | Exhibitor Registration | Qatar Education Expo 2026",
+        "url": "https://eduexpoqatar.com/booth-registration.html"
       },
       {
         "@context": "https://schema.org",
@@ -73,12 +59,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Exhibitors",
-          "item": "/why-exhibit.html"
+          "item": "https://eduexpoqatar.com/why-exhibit.html"
         },{
           "@type": "ListItem",
           "position": 3,
