--- a/brand-exposure-ar.html
+++ b/brand-exposure-ar.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -31,20 +29,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
+        "@type": "Service",
+        "name": "الانتشار الإعلامي للرعاة والعارضين في معرض قطر للتعليم 2026",
+        "description": "عزز وصول علامتك التجارية إلى أكثر من مليون انطباع في معرض التعليم الخليجي الرائد، معرض قطر للتعليم 2026. اكتشف نظامنا التسويقي الشامل 360 درجة للرعاة والعارضين في منطقة الشرق الأوسط وشمال أفريقيا.",
+        "url": "https://eduexpoqatar.com/brand-exposure-ar.html",
+        "provider": {
+          "@type": "Organization",
+          "name": "معرض قطر للتعليم 2026",
+          "url": "https://eduexpoqatar.com/index-ar.html"
+        },
+        "serviceType": "Sponsorship and Brand Marketing",
+        "areaServed": {
+          "@type": "Country",
+          "name": "QA"
         }
       },
       {
@@ -54,12 +51,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "للرعاة",
-          "item": "/sponsorship-tiers-ar.html"
+          "item": "https://eduexpoqatar.com/sponsorship-tiers-ar.html"
         },{
           "@type": "ListItem",
           "position": 3,
