--- a/career-counselling-ar.html
+++ b/career-counselling-ar.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -30,20 +29,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
+        "@type": "Service",
+        "name": "إرشاد مهني مجاني للدراسة في الخارج",
+        "description": "احصل على إرشاد مهني متخصص مجاني في معرض قطر للتعليم 2026، المعرض الجامعي الرائد في الدوحة. إرشادنا مثالي للطلاب الذين يخططون للدراسة في الخارج، بما في ذلك وجهات عليا مثل المملكة المتحدة وكندا.",
+        "url": "https://eduexpoqatar.com/career-counselling-ar.html",
+        "provider": {
+          "@type": "Organization",
+          "name": "معرض قطر للتعليم 2026",
+          "url": "https://eduexpoqatar.com/index-ar.html"
+        },
+        "serviceType": "Career Counselling",
+        "areaServed": {
+          "@type": "Country",
+          "name": "QA"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "QAR"
         }
       },
       {
@@ -53,12 +56,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "للطلاب",
-          "item": "/student-registration-ar.html"
+          "item": "https://eduexpoqatar.com/student-registration-ar.html"
         },{
           "@type": "ListItem",
           "position": 3,
