--- a/faq-ar.html
+++ b/faq-ar.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -29,24 +27,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script type="application/ld+json">
     [
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
-      },
       {
         "@context": "https://schema.org",
         "@type": "FAQPage",
@@ -164,7 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
@@ -178,7 +158,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
             t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "u1z7soldc8");
+    })(window, document, "clarity", "script", "u1z7soldc8");
 </script>
 </head>
 <body>
@@ -291,7 +271,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>يضم المعرض معارض للجامعات، ومحادثات قيادية، وورش عمل مبتكرة، وهاكاثون lovable x معرض قطر للتعليم 2026 للطلاب. اطلع على <a href='workshops-ar.html'>جدول الأعمال</a> الكامل لمزيد من التفاصيل.</p>
+                            <p>يضم المعرض معارض للجامعات، ومحادثات قيادية، وورش عمل مبتكرة، و<a href="qatar-expo-hackathon-ar.html">هاكاثون</a> lovable x معرض قطر للتعليم 2026 للطلاب. اطلع على <a href='workshops-ar.html'>جدول الأعمال</a> الكامل لمزيد من التفاصيل.</p>
                         </div>
                     </div>
                     <div class="faq-item">
