--- a/why-exhibit.html
+++ b/why-exhibit.html
@@ -2,15 +2,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -20,19 +29,14 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Exhibit at the leading student recruitment fair and education exhibition in Doha. Connect with thousands of students and parents from across the Gulf region. Book your booth today.">
-    <title>Exhibit at Qatar's Top Student Recruitment Fair | Qatar Education Expo 2026</title>
+    <meta name="description" content="Exhibit at the leading student recruitment fair and education exhibition in Doha. Connect with thousands of students and parents from across the GCC. Book your booth today.">
+    <title>Exhibit at Qatar's Premier Student Recruitment Fair | Qatar Education Expo 2026</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/why-exhibit.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/why-exhibit-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/why-exhibit.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/why-exhibit.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/why-exhibit.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,21 +47,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "Exhibit at Qatar's Premier Student Recruitment Fair | Qatar Education Expo 2026",
+        "url": "https://eduexpoqatar.com/why-exhibit.html"
       },
       {
         "@context": "https://schema.org",
@@ -66,12 +58,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Exhibitors",
-          "item": "/why-exhibit.html"
+          "item": "https://eduexpoqatar.com/why-exhibit.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -82,10 +74,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -134,6 +130,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="why-exhibit-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                </div>
             </div>
         </div>
     </header>
@@ -141,36 +140,36 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Exhibit at the Leading Student Recruitment Fair in the Gulf</h1>
+                <h1>Exhibit at the Gulf's Premier Student Recruitment Fair</h1>
                 <p>Connect with the future of education in the MENA region.</p>
             </div>
         </section>
         
         <section id="exhibitor-benefits">
             <div class="container">
-                 <h2>Unlock Unrivaled Opportunities</h2>
+                 <h2>Unlock Unparalleled Opportunities</h2>
                  <p class="subtitle">Showcase your institution or EdTech solution to thousands of engaged students, parents, and industry leaders under one roof.</p>
                  <div class="benefits-grid">
                     <div class="benefit-card">
                         <i class="fas fa-users"></i>
                         <h3>Student Recruitment</h3>
-                        <p>Engage directly with over 4,000+ ambitious Grade 11-12 students actively seeking higher education opportunities abroad.</p>
+                        <p>Engage directly with over 4,000 ambitious Grade 11-12 students actively seeking higher education opportunities abroad.</p>
                     </div>
                      <div class="benefit-card">
                         <i class="fas fa-bullhorn"></i>
-                        <h3>Brand Visibility</h3>
-                        <p>Achieve over 1M+ brand impressions through our extensive marketing campaigns, media coverage, and on-site branding.</p>
+                        <h3>Brand Exposure</h3>
+                        <p>Achieve 1M+ brand impressions through our extensive marketing campaigns, media coverage, and on-site branding.</p>
                     </div>
                      <div class="benefit-card">
                         <i class="fas fa-lightbulb"></i>
                         <h3>Thought Leadership</h3>
-                        <p>Shape the education agenda by hosting workshops, joining panel discussions, and presenting your vision to a captive audience.</p>
+                        <p>Shape the education agenda by hosting workshops, joining panel discussions, and presenting your vision to an engaged audience.</p>
                     </div>
                      <div class="benefit-card partnership-card-with-mascot">
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.webp" alt="Qatar Education Expo's owl mascot flying above the strategic partnerships card." class="card-top-mascot">
                         <i class="fas fa-handshake"></i>
                         <h3>Strategic Partnerships</h3>
-                        <p>Network with K-12 principals, university deans, government officials, and investors to forge powerful new alliances.</p>
+                        <p>Connect with K-12 school principals, university deans, government officials, and investors to forge powerful new alliances.</p>
                     </div>
                  </div>
                  <div class="section-cta">
@@ -182,7 +181,7 @@
         <section id="who-should-exhibit" class="bg-surface">
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
-                <p class="subtitle">If you provide solutions for the education ecosystem, Qatar Education Expo is your platform.</p>
+                <p class="subtitle">If you provide solutions for the education ecosystem,<br> Qatar Education Expo is your platform.</p>
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
                         <i class="fas fa-university"></i>
@@ -214,11 +213,12 @@
         </section>
     </main>
 
+    <div id="cookie-banner"></div>
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -229,6 +229,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -278,7 +279,7 @@
         <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
             <button class="modal-close-btn" aria-label="Close">&times;</button>
             <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
-            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
+            <p>Get our official Exhibitor & Sponsorship Deck, including package options and ROI details, sent straight to your inbox.</p>
             <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
         </div>
     </div>
@@ -329,7 +330,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
         <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
@@ -338,7 +339,6 @@
         <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
     </div>
 
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
