--- a/why-exhibit-ar.html
+++ b/why-exhibit-ar.html
@@ -1,16 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -39,21 +36,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "اعرض في معرض استقطاب الطلاب الأول في قطر | معرض قطر للتعليم 2026",
+        "url": "https://eduexpoqatar.com/why-exhibit-ar.html"
       },
       {
         "@context": "https://schema.org",
@@ -62,12 +47,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "للعارضين",
-          "item": "/why-exhibit-ar.html"
+          "item": "https://eduexpoqatar.com/why-exhibit-ar.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -78,10 +63,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="شعار معرض قطر للتعليم 2026"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -166,7 +155,7 @@
                         <p>شكّل أجندة التعليم من خلال استضافة ورش عمل، والمشاركة في حلقات نقاش، وتقديم رؤيتك لجمهور متفاعل.</p>
                     </div>
                      <div class="benefit-card partnership-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.webp" alt="Qatar Education Expo's owl mascot flying above the strategic partnerships card." class="card-top-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762096626/Untitled_design_-_2025-11-02T204524.545_u6ylye.webp" alt="تميمة البومة لمعرض قطر للتعليم تحلق فوق بطاقة الشراكات الاستراتيجية." class="card-top-mascot">
                         <i class="fas fa-handshake"></i>
                         <h3>الشراكات الاستراتيجية</h3>
                         <p>تواصل مع مديري المدارس الابتدائية والثانوية، وعمداء الجامعات، والمسؤولين الحكوميين، والمستثمرين لتكوين تحالفات جديدة قوية.</p>
@@ -213,11 +202,12 @@
         </section>
     </main>
 
+    <div id="cookie-banner"></div>
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="شعار معرض قطر للتعليم 2026"></a>
                     <p>الحدث الرائد الذي يجمع قادة التعليم والمؤسسات والمبتكرين في منطقة الشرق الأوسط وشمال أفريقيا.</p>
                 </div>
                 <div class="footer-col">
@@ -228,6 +218,7 @@
                         <li><a href="why-exhibit-ar.html">للعارضين</a></li>
                         <li><a href="sponsorship-tiers-ar.html">للرعاة</a></li>
                         <li><a href="student-registration-ar.html">تسجيل الطلاب</a></li>
+                        <li><a href="blog-ar.html">المدونة</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -251,7 +242,7 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+97474449111">+974 7444 9111</a>
+                            <a href="tel:+97474449111" dir="ltr">+974 7444 9111</a>
                         </li>
                     </ul>
                     <div class="social-links">
@@ -328,7 +319,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Mobile Sticky Bar -->
     <div id="mobile-sticky-bar">
         <a href="booth-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>عارض</span></a>
