--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -23,14 +20,13 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="description" content="Read the official privacy policy for Qatar Education Expo 2026. Learn how we collect, use, and protect your personal information for the event.">
     <title>Privacy Policy - Qatar Education Expo 2026</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/privacy.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/privacy-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/privacy.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/privacy.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/privacy.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,21 +36,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "Privacy Policy - Qatar Education Expo 2026",
+        "url": "https://eduexpoqatar.com/privacy.html"
       },
       {
         "@context": "https://schema.org",
@@ -63,7 +47,7 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
@@ -83,10 +67,14 @@
     </style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -135,6 +123,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="privacy-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
+                </div>
             </div>
         </div>
     </header>
@@ -200,11 +191,12 @@
         </section>
     </main>
     
+    <div id="cookie-banner"></div>
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -215,6 +207,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -324,7 +317,6 @@
         <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
     </div>
 
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
